create a new image target

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "meta-qt5"]
 	path = meta-qt5
 	url = https://github.com/meta-qt5/meta-qt5.git
+[submodule "meta-maker"]
+	path = meta-maker
+	url = http://git.yoctoproject.org/git/meta-maker
