--- a/meta-sb/recipes-core/systemd/files/mjpg-streamer.service
+++ b/meta-sb/recipes-core/systemd/files/mjpg-streamer.service
@@ -6,5 +6,5 @@ BindsTo=dev-video0.device
 [Service]
 Type=simple
 Enviroment=statedir=/usr/bin
-ExecStart=/usr/bin/mjpg_streamer -i "input_uvc.so -r 1280x720 -d /dev/video0 -f 30 -q 80" -o "output_http.so -p 8080 -w /usr/share/mjpg-streamer/www"
+ExecStart=/usr/bin/mjpg_streamer -i "input_uvc.so -d /dev/video0 -y -n -f 5 -r 1920x1080 -q 85" -o "output_http.so -p 8080 -w /usr/share/mjpg-streamer/www"
 
